<resources>
    <string name="app_name">SportEvent</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="splash">SportEvent</string>
    <string name="address">Enter address</string>
    <string name="welcome">Welcome</string>
    <string name="btn">Find</string>
    <string name="onb1_contentDescription">A training girl on green background</string>
    <string name="onb2_contentDescription">Football</string>
    <string name="onb3_contentDescription">Running girl and boy</string>
    <string name="next">Далее</string>
    <string name="start">Начать</string>
    <string name="ready">Готово</string>
    <string name="titleOnb1">Актуальные спортивные площадки</string>
    <string name="textOnb1">Найдите идеальное место для ваших тренировок: Вы можете настроить фильтры и выбрать подходящую площадку.</string>
    <string name="skip">Пропустить</string>
    <string name="titleOnb2">Создание и поиск спортивных мероприятий</string>
    <string name="textOnb2">Присоединяйтесь к спортивным мероприятиям или создавайте свои собственные.</string>
    <string name="titleOnb3">Поиск единомышленников</string>
    <string name="textOnb3">Найдите компаньонов для занятий спортом. Заниматься в компаниии единомышленников приятнее и эффективнее. </string>
    <string name="login">Войти</string>
    <string name="registry">Зарегистироваться</string>
    <string name="forgotPsswrd">Забыли пароль?</string>
    <string name="password">Пароль</string>
    <string name="login_text">Логин</string>
    <string name="email">Email</string>
    <string name="nick">Ник</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="birthday">Дата рождения</string>
    <string name="country">Страна</string>
    <string name="locality">Населенный пункт</string>
    <string name="repeatPsswrd">Повторите пароль</string>
    <string name="succsessful_registry">О, ура! Вы зарегистрировались!</string>
    <string name="events">События</string>
    <string name="map">Карта</string>
    <string name="enter">Войти в аккаунт</string>
    <string name="you_are_registrated">Вы зарегистрированы!</string>
    <string name="regWith">Зарегистрироваться с помощью</string>
    <string name="privacyPolicy">Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь с Политикой конфиденциальности</string>
    <string name="schedule">Расписание</string>
    <string name="profile">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Join">Присоединиться</string>
    <string name="registration">Регистрация</string>
    <string name="favourite_sports">Любимые виды спорта</string>
    <string name="today">Cегодня</string>
    <string name="create_event">Создать событие</string>
    <string name="_1_choose_sport">1. Выберите вид спорта</string>
    <string name="_2_person_number">2. Укажите количество человек</string>
    <string name="required_quantity">Необходимое количество</string>
    <string name="max_quantity">Указать максимальное количество</string>
    <string name="_3_place">3. Укажите место</string>
    <string name="_4_date">4. Укажите дату</string>
    <string name="create">Создать</string>
    <string name="Cancel">Отмена</string>
    <string name="exit">Выйти</string>
    <string name="_5_start_time">5. Укажите время начала</string>
    <string name="_6_end_time">6. Укажите время окончания</string>
    <string name="my_grounds">Мои площадки</string>
    <string name="grounds">Посещённые площадки</string>
    <string name="grounds_title">Площадки</string>
    <string name="my_events">Мои мероприятия</string>
    <string name="placed_events">Посещённые мероприятия</string>
    <string name="events_title">Мероприятия</string>
    <string name="status">Мой статус</string>
    <string name="relax">Релакс</string>
    <string name="train">Тренируюсь</string>
    <string name="busy">Занят</string>
    <string name="looking_for_company">Ищу компанию</string>
    <string name="in_way">Уже в пути</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="Username">Ник</string>
    <string name="settings">Настройки</string>
    <string name="search_settings">Поиск настроек</string>
    <string name="confid">Конфиденциальность</string>
    <string name="security_and_login">Безопасность и вход</string>
    <string name="history">История посещений</string>
    <string name="sound">Звук</string>
    <string name="vibrate">Вибрация</string>
    <string name="push">Push-уведомления</string>
    <string name="sms_text">SMS-уведомления</string>
    <string name="dark_mode">Тёмная тема</string>
    <string name="language">Язык</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="Filters">Фильтры</string>
    <string name="_2_free_seats">2. Укажие количество свободных мест</string>
    <string name="scince">От</string>
    <string name="from">От</string>
    <string name="to">До</string>
    <string name="Apply">Применить</string>
    <string name="check_email">Подтверждение почты</string>
    <string name="check_email_text">Проверьте, пожалуйста, свой почтовый ящик. Следуйте инструкции в письме для активации аккаунта. Письмо могло попасть в папку “Спам”.</string>
    <string name="ok">OK</string>
    <string name="sport">OK</string>


</resources>
